<package>
  <name>s1_project</name>
  <version>0.4.0</version>
  <description>ROS By Car Volume 1</description>
  <maintainer email="wzhang@softrobtech.com">Carl</maintainer>

  <license>BSD</license>

  <author email="wzhang@softrobtech.com">Maintained by Carl </author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>s1_base_controller</run_depend>
  <run_depend>s1_bringup</run_depend>
  <run_depend>s1_description</run_depend>
  <run_depend>s1_teleop</run_depend> 
  <export>
    <metapackage/>
  </export>
</package>
